src/main/java/com/example/demo/error/InvalidCredentialsException.java
package com.example.demo.error;

public class InvalidCredentialsException extends RuntimeException {

	/**
	 * 
	 */
	private static final long serialVersionUID = 1L;
	
	public InvalidCredentialsException() {
		super("Invalid credentials");
	}

}
